<resources>
    <string name="app_name">Creddit</string>
    <string name="enter_your_pin">Enter your mPIN</string>
    <string name="set_up_pin">SET UP MPIN</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_your_pin_once_again">Enter mPIN again</string>
    <string name="new_pin">New 6 digit PIN</string>
    <string name="please_wait">Please wait..</string>
    <string name="phone_number">Phone Number</string>
    <string name="account">Account</string>
    <string name="personal_info">Personal Info</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="dash">not present</string>
    <string name="amount">Amount?</string>
    <string name="paid_to">Paid to?</string>
</resources>
