<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@mipmap/ic_launcher"
        />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/phone_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/essential_margin_double"
        android:layout_marginRight="@dimen/essential_margin_double"
        android:layout_marginTop="@dimen/essential_margin_double">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:maxLength="10" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/pin_layout"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/essential_margin_double"
        android:layout_marginRight="@dimen/essential_margin_double"
        android:layout_below="@id/phone_number_layout"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/mPinEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:hint="@string/enter_your_pin"
            android:maxLength="6"
            android:gravity="center"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:background="?attr/selectableItemBackground"
        android:layout_below="@id/pin_layout"
        android:layout_marginLeft="@dimen/essential_margin_double"
        android:layout_marginRight="@dimen/essential_margin_double"
        android:layout_marginTop="@dimen/essential_margin_half"
        android:layout_marginBottom="@dimen/essential_margin_double"
        />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_up_pin"
        android:background="?attr/selectableItemBackground"
        android:layout_below="@id/submit"
        android:layout_marginLeft="@dimen/essential_margin_double"
        android:layout_marginRight="@dimen/essential_margin_double"
        android:layout_marginTop="@dimen/essential_margin_half"
        android:layout_marginBottom="@dimen/essential_margin_double"
        />



</RelativeLayout>