<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@mipmap/ic_launcher" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/phone_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_marginLeft="@dimen/essential_margin_double"
        android:layout_marginRight="@dimen/essential_margin_double"
        android:layout_marginTop="@dimen/essential_margin_double">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:maxLength="10" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/pin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_number_layout"
        android:layout_marginLeft="@dimen/essential_margin_double"
        android:layout_marginRight="@dimen/essential_margin_double"
        android:layout_marginBottom="@dimen/essential_margin_half"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/mPinEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/new_pin"
            android:inputType="numberPassword"
            android:maxLength="6" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/pin_layout_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pin_layout"
        android:layout_marginLeft="@dimen/essential_margin_double"
        android:layout_marginRight="@dimen/essential_margin_double"
        android:layout_marginBottom="@dimen/essential_margin_double"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/mPinAgainEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/enter_your_pin_once_again"
            android:inputType="numberPassword"
            android:maxLength="6" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pin_layout_again"
        android:layout_marginBottom="@dimen/essential_margin_double"
        android:layout_marginLeft="@dimen/essential_margin_double"
        android:layout_marginRight="@dimen/essential_margin_double"
        android:layout_marginTop="@dimen/essential_margin_half"
        android:background="?attr/selectableItemBackground"
        android:text="@string/submit" />


</RelativeLayout>